#16719 shorten ut elapsed time